--- a/projeto-main/paginas/login-register.html
+++ b/projeto-main/paginas/login-register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -68,12 +68,12 @@
                     <li class="nav-item"><a class="nav-link" href="..//paginas/cadastro.html">Cadastro</a></li>
                     <li class="nav-item nav-dropdown"><a class="nav-link" href="..//paginas/destaques.html">Catalogo</a>
                         <div class="nav-dropdown-content">
-                            <a href="..//paginas/imagem1.html">Jaleco 1</a>
-                            <a href="..//paginas/imagem2.html">Jaleco 2</a>
-                            <a href="..//paginas/imagem3.html">Jaleco 3</a>
-                            <a href="..//paginas/imagem4.html">Jaleco 4</a>
-                            <a href="..//paginas/imagem5.html">Jaleco 5</a>
-                            <a href="..//paginas/imagem6.html">Jaleco 6</a>
+                            <a href="..//paginas/imagem1.html">Jaleco vinho</a>
+                            <a href="..//paginas/imagem2.html">Jaleco roxo</a>
+                            <a href="..//paginas/imagem3.html">Jaleco cinza</a>
+                            <a href="..//paginas/imagem4.html">Jaleco verde militar</a>
+                            <a href="..//paginas/imagem5.html">Jaleco jade</a>
+                            <a href="..//paginas/imagem6.html">Jaleco preto</a>
                         </div>
                     </li>
                     <li id="logoutButtonContainer" class="nav-item" style="display: none;">
@@ -112,20 +112,13 @@
             <div class="form-field d-flex align-items-center">
                 <input type="password" name="password" id="pwd" placeholder="Senha" required>
             </div>
-            <div class="form-field d-flex align-items-center">
-                <input type="checkbox" onclick="pwd.type = this. checked ? 'text' : 'password'">
-            </div>
             <button type="submit" class="btn mt-3">Login</button>
         </form>
         <div class="text-center fs-6">
-            <a href="..//paginas/index.html">Voltar à tela inicial</a><br>
-            <a href="..//paginas/cadastro.html">Não tem cadastro? Registre-se aqui</a>
+            <a href="..//paginas/index.html">Voltar</a><br>
+            <a href="..//paginas/cadastro.html">Registrar-se</a>
         </div>
     </div>
-    <footer class="custom-footer text-black text-center py-3">
-            <!-- Mensagem de direitos autorais -->
-            <p>&copy; 2024 Meu Jaleco - Todos os direitos reservados.</p>
-    </footer>
 
     <script>
         document.getElementById('loginForm').addEventListener('submit', function (e) {
