--- a/projeto-main/paginas/sobrenos.html
+++ b/projeto-main/paginas/sobrenos.html
@@ -43,12 +43,12 @@
                     <li class="nav-item"><a class="nav-link" href="..//paginas/cadastro.html">Cadastro</a></li>
                     <li class="nav-item nav-dropdown"><a class="nav-link" href="..//paginas/destaques.html">Catalogo</a>
                         <div class="nav-dropdown-content">
-                            <a href="..//paginas/imagem1.html">Jaleco 1</a>
-                            <a href="..//paginas/imagem2.html">Jaleco 2</a>
-                            <a href="..//paginas/imagem3.html">Jaleco 3</a>
-                            <a href="..//paginas/imagem4.html">Jaleco 4</a>
-                            <a href="..//paginas/imagem5.html">Jaleco 5</a>
-                            <a href="..//paginas/imagem6.html">Jaleco 6</a>
+                            <a href="..//paginas/imagem1.html">Jaleco vinho</a>
+                            <a href="..//paginas/imagem2.html">Jaleco roxo</a>
+                            <a href="..//paginas/imagem3.html">Jaleco cinza</a>
+                            <a href="..//paginas/imagem4.html">Jaleco verde militar</a>
+                            <a href="..//paginas/imagem5.html">Jaleco jade</a>
+                            <a href="..//paginas/imagem6.html">Jaleco preto</a>
                         </div>
                     </li>
                     <li id="logoutButtonContainer" class="nav-item" style="display: none;">
@@ -133,7 +133,7 @@
         <!-- Rodapé da página -->
         <footer class="custom-footer text-black text-center py-3">
             <!-- Mensagem de direitos autorais -->
-            <p>&copy; 2024 Meu Jaleco - Todos os direitos reservados.</p>
+            <p>&copy; 2024 Seu Site - Todos os direitos reservados.</p>
         </footer>
 
         <!-- Scripts JS para funcionalidades do Bootstrap e interação com o carrossel -->
