--- a/projeto-main/paginas/cadastro.html
+++ b/projeto-main/paginas/cadastro.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -41,12 +40,12 @@
                     <li class="nav-item"><a class="nav-link" href="..//paginas/cadastro.html">Cadastro</a></li>
                     <li class="nav-item nav-dropdown"><a class="nav-link" href="..//paginas/destaques.html">Catalogo</a>
                         <div class="nav-dropdown-content">
-                            <a href="..//paginas/imagem1.html">Jaleco 1</a>
-                            <a href="..//paginas/imagem2.html">Jaleco 2</a>
-                            <a href="..//paginas/imagem3.html">Jaleco 3</a>
-                            <a href="..//paginas/imagem4.html">Jaleco 4</a>
-                            <a href="..//paginas/imagem5.html">Jaleco 5</a>
-                            <a href="..//paginas/imagem6.html">Jaleco 6</a>
+                            <a href="..//paginas/imagem1.html">Jaleco vinho</a>
+                            <a href="..//paginas/imagem2.html">Jaleco roxo</a>
+                            <a href="..//paginas/imagem3.html">Jaleco cinza</a>
+                            <a href="..//paginas/imagem4.html">Jaleco verde militar</a>
+                            <a href="..//paginas/imagem5.html">Jaleco jade</a>
+                            <a href="..//paginas/imagem6.html">Jaleco preto</a>
                         </div>
                     </li>
                     <li id="logoutButtonContainer" class="nav-item" style="display: none;">
@@ -71,7 +70,7 @@
             </div>
         </div>
     </nav>
-    <div class="form-container">
+  <div class="form-container">
     <img src="https://i.imgur.com/o9TLd1R.png" alt="Logo" referrerpolicy="no-referrer" class="d-block mx-auto mb-3" style="max-width:100px;">
     <h4 class="text-center mb-4">Formulário de Cadastro</h4>
 
@@ -181,12 +180,10 @@
         <div class="col-md-4">
           <label for="senha" class="form-label">Senha</label>
           <input type="password" class="form-control" id="senha" required>
-          <input type="checkbox" onclick="senha.type = this. checked ? 'text' : 'password'">
         </div>
         <div class="col-md-4">
           <label for="confirmarSenha" class="form-label">Confirmar Senha</label>
           <input type="password" class="form-control" id="confirmarSenha" required>
-          <input type="checkbox" onclick="confirmarSenha.type = this. checked ? 'text' : 'password'">
           <div class="error" id="senhaErro"></div>
         </div>
       </div>
@@ -194,20 +191,13 @@
       <!-- Botões -->
       <div class="d-flex justify-content-between mt-4">
         <button type="submit" class="btn btn-success">Enviar</button>
-        <div class="text-center fs-6">
-            <a href="..//paginas/index.html">Voltar à tela inicial</a><br>
-            <a href="..//paginas/login-register.html">Já tem cadastro? Faça o login aqui</a>
-        </div>
         <button type="reset" class="btn btn-secondary">Limpar</button>
       </div>
     </form>
   </div>
-  <footer class="custom-footer text-black text-center py-3">
-            <!-- Mensagem de direitos autorais -->
-            <p>&copy; 2024 Meu Jaleco - Todos os direitos reservados.</p>
-  </footer>
 
-  <script src="/scripts/cadastro.js"></script>
+  <script src="../scripts/cadastro.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
