--- a/projeto-main/paginas/imagem4.html
+++ b/projeto-main/paginas/imagem4.html
@@ -26,12 +26,12 @@
                     <li class="nav-item"><a class="nav-link" href="..//paginas/cadastro.html">Cadastro</a></li>
                     <li class="nav-item nav-dropdown"><a class="nav-link" href="..//paginas/destaques.html">Catalogo</a>
                         <div class="nav-dropdown-content">
-                            <a href="..//paginas/imagem1.html">Jaleco 1</a>
-                            <a href="..//paginas/imagem2.html">Jaleco 2</a>
-                            <a href="..//paginas/imagem3.html">Jaleco 3</a>
-                            <a href="..//paginas/imagem4.html">Jaleco 4</a>
-                            <a href="..//paginas/imagem5.html">Jaleco 5</a>
-                            <a href="..//paginas/imagem6.html">Jaleco 6</a>
+                            <a href="..//paginas/imagem1.html">Jaleco vinho</a>
+                            <a href="..//paginas/imagem2.html">Jaleco roxo</a>
+                            <a href="..//paginas/imagem3.html">Jaleco cinza</a>
+                            <a href="..//paginas/imagem4.html">Jaleco verde militar</a>
+                            <a href="..//paginas/imagem5.html">Jaleco jade</a>
+                            <a href="..//paginas/imagem6.html">Jaleco preto</a>
                         </div>
                     </li>
                     <li id="logoutButtonContainer" class="nav-item" style="display: none;">
@@ -58,7 +58,7 @@
     </nav>
 
     <div class="container py-5">
-        <h1 class="text-center">Verde Militar 1</h1>
+        <h1 class="text-center">Verde Militar</h1>
         <!-- Criação de um row (linha) com duas colunas -->
         <div class="row">
             <!-- Coluna para a imagem (50% do tamanho) -->
